@@ -71,7 +71,6 @@ E-Commerce and Events
 
 Social Sharing Platforms ... make it even easier for affiliates to share their links
 
-- [Affiliates AddThis](https://www.itthinx.com/plugins/affiliates-addthis) : This integration with [AddThis](https://www.addthis.com) converts URLs to share into affiliate links automatically for affiliates who are logged in.
 - [Affiliates AddToAny](https://www.itthinx.com/plugins/affiliates-addtoany) : This integration with [AddToAny](https://www.addtoany.com) converts URLs to share into affiliate links automatically for affiliates who are logged in.
 
 Advertising
