@@ -8,6 +8,7 @@
 * Added more robust API function to use unlimited time for requests (now used for robot cleaning requests).
 * Updated information and revised styling of the add-ons section.
 * Updated the translation template.
+* Removed deprecated/dropped integrations.
 
 = 5.1.0 =
 * WordPress 6.8 compatible.
